[package]
name = "universal-thunderbolt-driver"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.3"
native-tls = "0.2"

[profile.release]
opt-level = 3